fix consolemodular